# cpp-standard-project-structure

./: CMakeLists.txt
cmake/: messagecolor.cmake  utils.cmake
include/src/: main.h
include/src/Controllers/: HomeController.h
include/src/Interfaces/: ControllerInterface.h
sharelib/: CMakeLists.txt
src/: CMakeLists.txt  main.cc
src/Controllers/: CMakeLists.txt  HomeController.cc
src/Interfaces/: CMakeLists.txt  ControllerInterface.cc
src/common/: version.hpp
staticlib/: CMakeLists.txt
